--- a/CocheAmigos2/Web.config
+++ b/CocheAmigos2/Web.config
@@ -12,6 +12,7 @@
     <add key="webpages:Version" value="1.0.0.0" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+   <add key="EmailForgotPassword" value="meramoroscon@gmail.com" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
