--- a/CocheAmigos2/Web.config
+++ b/CocheAmigos2/Web.config
@@ -12,7 +12,10 @@
     <add key="webpages:Version" value="1.0.0.0" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-   <add key="EmailForgotPassword" value="meramoroscon@gmail.com" />
+   <add key="EmailNoReply" value="no-replay@cocheamigos.com" />
+   <add key="EmailNoReplyPassword" value="coche2013" />
+  <add key="EmailSMTPNoReply" value="auth.smtp.1and1.co.uk" />
+   <add key="EmailPort" value="587" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
