--- a/CocheAmigos2/Web.config
+++ b/CocheAmigos2/Web.config
@@ -61,6 +61,10 @@
     </sessionState>
   </system.web>
   <system.webServer>
+    <security>
+      <requestFiltering allowDoubleEscaping="true">
+         </requestFiltering>
+    </security>
     <validation validateIntegratedModeConfiguration="false" />
   </system.webServer>
   <runtime>
