--- a/DataAccess/DataAccess.csproj
+++ b/DataAccess/DataAccess.csproj
@@ -41,12 +41,14 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Business_Objects\City.cs" />
+    <Compile Include="Business_Objects\Paths.cs" />
     <Compile Include="Business_Objects\Users.cs" />
     <Compile Include="CAResources\CocheAmigoSpanish.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>CocheAmigoSpanish.resx</DependentUpon>
     </Compile>
+    <Compile Include="Repositories\Path_Repository.cs" />
     <Compile Include="Statics\Constants.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\City_Repository.cs" />
